2006-03-04 Karsten Behrmann <BearPerson@sourcemage.org>
	* bootloader: also run mkofboot on ppc
	* diskStructure: make sure fstab includes swapfile

2006-02-05 Karsten Behrmann <BearPerson@sourcemage.org>
	* iso.packages: add eject, do not install shutdown.conf since we
	  install our own
	* skeleton/etc/shutdown.conf: add stuff to eject CD before reboot /
	  chroot into the installed system
	* iso.command, skeleton/etc/init.d/runlevels/tmpfs.sh: add script to
	  set up writeable /etc and such without having to boot the initrd,
	  add hack since p4 won't let us store the right path
	* skeleton/initrd/sbin/smgl.init: store CD device name for eject hack
	* skeleton/sbin/{dummy-halt.sh,shutdown}: fixes in the eject CD /
	  chroot systems
	* installer.sh: add code to use the eject / chroot hack

2006-02-02 Eric Sandall <eric@sandall.us>
	* iso/skeleton/usr/share/smgl.install/modules/timezone: Fixed spelling
	  of dailight and re-set (Bug #10485)
	  Use UTC/GMT as main reference for UTC, GMT, and Universal  (Bug #10485)

2006-01-26 Karsten Behrmann <BearPerson@sourcemage.org>
	* generation-scripts/caster: be more efficient extracting $UPDATED

2006-01-10 Karsten Behrmann <BearPerson@sourcemage.org>
	* 30spellinstall: add user sshd in openssh installation

2006-01-03 Karsten Behrmann <BearPerson@sourcemage.org>
	* caster: work around cast --deps problem
	* 10common: make memory_menu actually respect $OPTS
	* 30spellinstall: add lots of try_run -q's to log errors nicely
	* debug: add -q parameter to try_run to disable interactiveness
	* nLS, syslog, bootloader: fix memory_menu by adding --item-help
	* syslog: fix init script name for metalog

2005-12-30 Karsten Behrmann <BearPerson@sourcemage.org>
	* templates/fstab.last: add comments about cdrom/floppy mount points

2005-12-30 Karsten Behrmann <BearPerson@sourcemage.org>
	* iso.dirs: remove unconditional creation of isolinux dir
	* diskStructure: add code for ppc disks, fix for >9 partitions,
	  reactivate RAID option
