@@ -1,3 +1,6 @@
+2006-03-20 Karsten Behrmann <BearPerson@sourcemage.org>
+	* installer.sh: add initial color stuff, clean up a bit
+
 2006-03-04 Karsten Behrmann <BearPerson@sourcemage.org>
 	* bootloader: also run mkofboot on ppc
 	* diskStructure: make sure fstab includes swapfile
